[tool.poetry]
name = "barrymorebot"
version = "0.1.0"
description = "My personal butler bot"
authors = ["Nesterenko <nestslock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
