[tool.poetry]
name = "barrymorebot"
version = "0.1.0"
description = "My personal butler bot"
authors = ["Nesterenko <nestslock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
pytest = "^6.2.5"
pytest-aiohttp = "^1.0.3"
pytest-asyncio = "^0.17.2"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
